remove xml suppoertive mechanism and create user POST request implemented
