# client/api/openapi.yaml
@@ -11,22 +11,86 @@ tags:
 - name: user
   description: Operations about user
 paths:
-  /user:
+  /createuser:
     post:
       tags:
       - user
       summary: Create user
-      description: This can only be done by the logged in user.
+      description: This method will create the particular user 
       operationId: createUser
       parameters:
+      - name: id
+        in: query
+        description: The user Id can define here
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: integer
       - name: username
         in: query
-        description: The user name for login
+        description: The user name for login can define here 
         required: false
         style: form
         explode: true
         schema:
           type: string
+      - name: firstName
+        in: query
+        description: The user first name can define here 
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string    
+      - name: lastName
+        in: query
+        description: The user last name can define here 
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string  
+      - name: email
+        in: query
+        description: The user login email can define here
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string  
+      - name: password
+        in: query
+        description: The user login password can define here
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string  
+      - name: userStatus
+        in: query
+        description: The status can define here
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: integer
+      - name: role
+        in: query
+        description: The user role can define here
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string 
+      - name: userType
+        in: query
+        description: The status can define here
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: integer
       requestBody:
         description: Created user object
         content:
@@ -227,133 +291,48 @@ paths:
       x-swagger-router-controller: User
 components:
   schemas:
-    Order:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 10
-        petId:
-          type: integer
-          format: int64
-          example: 198772
-        quantity:
-          type: integer
-          format: int32
-          example: 7
-        shipDate:
-          type: string
-          format: date-time
-        status:
-          type: string
-          description: Order Status
-          example: approved
-          enum:
-          - placed
-          - approved
-          - delivered
-        complete:
-          type: boolean
-      example:
-        petId: 198772
-        quantity: 7
-        id: 10
-        shipDate: 2000-01-23T04:56:07.000+00:00
-        complete: true
-        status: approved
-      xml:
-        name: order
-    Customer:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 100000
-        username:
-          type: string
-          example: fehguy
-        address:
-          type: array
-          xml:
-            name: addresses
-            wrapped: true
-          items:
-            $ref: '#/components/schemas/Address'
-      xml:
-        name: customer
-    Address:
-      type: object
-      properties:
-        street:
-          type: string
-          example: 437 Lytton
-        city:
-          type: string
-          example: Palo Alto
-        state:
-          type: string
-          example: CA
-        zip:
-          type: string
-          example: "94301"
-      xml:
-        name: address
-    Category:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 1
-        name:
-          type: string
-          example: Dogs
-      example:
-        name: Dogs
-        id: 1
-      xml:
-        name: category
     User:
       type: object
       properties:
         id:
           type: integer
           format: int64
-          example: 10
+          example: 1004
         username:
           type: string
-          example: theUser
+          example: Nandalochana
         firstName:
           type: string
-          example: John
+          example: Danushka
         lastName:
           type: string
-          example: James
+          example: nanda Lochana
         email:
           type: string
-          example: john@email.com
+          example: danushkanandalochana@email.com
         password:
           type: string
           example: "12345"
-        phone:
+        role:
           type: string
-          example: "12345"
+          example: "satff"
         userStatus:
           type: integer
           description: User Status
           format: int32
           example: 1
+        userType:
+          type: integer
+          format: int64
+          example: 1
       example:
-        firstName: John
-        lastName: James
+        firstName: Danushka
+        lastName: Nanda lochana
         password: "12345"
         userStatus: 1
-        phone: "12345"
-        id: 10
-        email: john@email.com
-        username: theUser
+        id: 1004
+        email: danushkanandalochana@email.com
+        username: Nandalochana
       xml:
         name: user
     Tag:
